<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- ===================== -->
    <!-- PRINCIPAL -->
    <!-- ===================== -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_home_foreground"
            android:title="@string/txt_homepage" />
    </group>

    <item android:title="@string/txt_menu_section_user" >
        <menu>
            <item
                android:id="@+id/navProfileDetails"
                android:icon="@drawable/ic_user_foreground"
                android:title="@string/txt_user_details" />

            <item
                android:id="@+id/navMyAnimals"
                android:icon="@drawable/ic_detalhes_foreground"
                android:title="@string/txt_OsMeusAnimais" />

            <item
                android:id="@+id/navFavorites"
                android:icon="@drawable/ic_star_border"
                android:title="@string/txt_favoritos" />
        </menu>
    </item>



    <item android:title="@string/txt_menu_section_content" >
        <menu>
            <item
                android:id="@+id/navDetalhesAnimal"
                android:icon="@drawable/ic_detalhes_foreground"
                android:title="@string/txt_anuncios_de_animais" />

            <item
                android:id="@+id/navCandidaturas"
                android:icon="@drawable/ic_candidaturas_foreground"
                android:title="@string/txt_candidatura" />
        </menu>
    </item>

    <item android:title="@string/txt_menu_section_communication" >
        <menu>
            <item
                android:id="@+id/navMessage"
                android:icon="@drawable/ic_message_foreground"
                android:title="@string/txt_messages" />


        </menu>
    </item>

    <item android:title="@string/txt_menu_section_session" >
        <menu>
            <item
                android:id="@+id/navLogout"
                android:title="@string/txt_logout" />
        </menu>
    </item>

</menu>
