<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/ic_home"
        android:title="@string/txt_home"/>

    <item
        android:id="@+id/bottom_animals"
        android:icon="@drawable/ic_pets"
        android:title="@string/txt_animais"/>

    <item
        android:id="@+id/bottom_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/txt_mensagens"/>



    <item
        android:id="@+id/bottom_application"
        android:icon="@drawable/ic_applications"
        android:title="@string/txt_candidaturas"/>

    <item
        android:id="@+id/bottom_favorites"
        android:icon="@drawable/ic_star_border"
        android:title="@string/txt_favoritos"/>

</menu>
