<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ApplicationsSendFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_apps"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:text="@string/txt_formulario_candidatura"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAnimalDetalhes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EFEFEF"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imgAnimalCard"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="12dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/placeholder" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNomeCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_nome_do_animal"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvRacaCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_raca_idade"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_dados_pessoais"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nome_completo"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_idade"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etIdade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_numero_telemovel"
            android:layout_marginBottom="24dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_habitacao"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/txt_tipo_habitacao"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spTipoHabitacao"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:drawable/btn_dropdown"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/txt_quantas_horas_vai_o_animal_passar_sozinho"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spHorasAnimal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:drawable/btn_dropdown"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/txt_criancas_em_casa"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/rgCriancas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <RadioButton
                android:id="@+id/rbCriancasSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sim"
                android:layout_marginEnd="16dp"/>
            <RadioButton
                android:id="@+id/rbCriancasNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nao" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_custos_e_outros"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ciente_dos_custos"
            android:textSize="14sp" />
        <RadioGroup
            android:id="@+id/rgCustos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <RadioButton
                android:id="@+id/rbCustosSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sim"
                android:layout_marginEnd="16dp"/>
            <RadioButton
                android:id="@+id/rbCustosNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nao" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_acompanhamento"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_visita_acompanhamento_pos_adocao"
            android:textSize="14sp" />
        <RadioGroup
            android:id="@+id/rbVisita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <RadioButton
                android:id="@+id/rbVisitaSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sim"
                android:layout_marginEnd="16dp"/>
            <RadioButton
                android:id="@+id/rVisitaNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nao" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_contenos_sobre_si"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_porque_quer_adotar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primary"
            android:padding="12dp"
            android:text="@string/txt_btn_submeter_candidatura"
            android:textColorLink="@color/background_apps" />

    </LinearLayout>
</ScrollView>